--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,5 +8,5 @@ import { Box } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
-  <Box borderWidth="10rem"> <Dialouge /></Box>
+  <Box> <Dialouge /></Box>
 </Layout>
