--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -1,7 +1,5 @@
 ---
 import 'open-props/postcss/style'
-
-import './layouts.css'
 ---
 
 <style is:global>
@@ -63,7 +61,7 @@ import './layouts.css'
 
   :root {
     /* 
-        vars from every layout book 
+        Set up modular scale
         */
     --border-thin: var(--border-size-1);
     --measure: 60ch;
@@ -164,47 +162,9 @@ import './layouts.css'
     
     */
 
-  [class^='box'] {
-    color: var(--text-1);
-    background-color: var(--surface-4);
-
-    /* outline: 0.125rem solid transparent;
-        outline-offset: -0.125rem; */
-
-    * {
-      color: inherit;
-      background-color: inherit;
-    }
-  }
-
   /* BOX */
 
   /* CENTER  Intrinsic centering*/
-
-  .center {
-    /* measurement of the content is critica */
-    box-sizing: content-box;
-    margin-inline: auto;
-    max-inline-size: var(--measure);
-    /* text align center */
-    /* text-align: center;
-        max-inline-size: var(--measure); */
-    /* Intrinsic centering?
-        Whether to center and child elements narrower than the max value */
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .cluster {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: var(--space, var(--size-2));
-    column-gap: var(--space, var(--size-fluid-5));
-    justify-content: space-between;
-    align-items: center;
-  }
 
   /* 
     ui */
@@ -328,5 +288,95 @@ import './layouts.css'
     font-size: var(--s0);
   }
 
+  /* Layouts */
+
+  [class^='stack'] > * {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /* top and bottom margins in horizontal-tb writing mode */
+    margin-block: 0;
+  }
+
+  .stack {
+    > * + * {
+      margin-block-start: var(--size-5);
+    }
+    /* p elements after the second element towards the bottom of the space. */
+    /* > :nth-child(2) {
+        margin-block-end: auto;
+    } */
+  }
+
+  .stack-large > * + * {
+    margin-block-start: var(--size-10);
+  }
+
+  .stack-small > * + * {
+    margin-block-start: var(--size-2);
+  }
+
+  /* end stack */
+
+  [class^='box'] {
+    color: var(--text-1);
+    background-color: var(--surface-4);
+
+    /* outline: 0.125rem solid transparent;
+        outline-offset: -0.125rem; */
+
+    * {
+      color: inherit;
+      background-color: inherit;
+    }
+  }
+
+  [class^='box'].invert {
+    filter: invert(100%);
+  }
+
+  .box {
+    padding: var(--s0);
+    border-width: var(--border-size-1);
+    border-color: var(--border-color);
+  }
+  .box-no-border {
+    outline: var(--size-0) solid transparent;
+    outline-offset: (calc * var(--size-0));
+  }
+  .center {
+    /* measurement of the content is critica */
+    box-sizing: content-box;
+    margin-inline: auto;
+    max-inline-size: var(--measure);
+    /* text align center */
+    /* text-align: center;
+        max-inline-size: var(--measure); */
+    /* Intrinsic centering?
+        Whether to center and child elements narrower than the max value */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cluster {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: var(--space, var(--size-2));
+    column-gap: var(--space, var(--size-fluid-5));
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .font-size\:base {
+    font-size: var(--font-size-base) !important;
+  }
+  .font-size\:biggish {
+    font-size: var(--font-size-biggish) !important;
+  }
+  .font-size\:big {
+    font-size: var(--font-size-big) !important;
+  }
   /* flow text  elements */
 </style>
