--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,17 @@
 ---
-// import HeaderLink from './HeaderLink.astro'
-
 import HeaderLink from './HeaderLink.astro'
 
 import { Box, Cluster } from '@cc/index'
 import Select from '@components/Select'
+
+type Props = {
+  invertMe: boolean
+}
+
+const { invertMe }: Props = Astro.props
 ---
 
-<header class="box invert">
+<header class:list={['box', { invert: invertMe }]}>
   <Cluster justify="space-between">
     <Box padding="0" borderWidth="1px">
       <Select client:only="react" transition:persist />
