--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,17 @@ import Layout from '@layouts/SimpleLayout.astro'
 
 import Dialouge from '@components/Dialouge.astro'
 import { Box } from '@cc/index.ts'
+import MixedStyles from '@components/MixedStyles.astro'
 ---
 
 <Layout title="home" description="testing css">
-  <Box> <Dialouge /></Box>
+  <Box>
+    <h1>not in MS</h1>
+    <MixedStyles>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem deleniti
+      soluta ducimus doloribus accusantium iusto corrupti ipsam, atque libero
+      omnis neque cum ut perspiciatis cupiditate maxime recusandae laudantium
+      non? Totam?
+    </MixedStyles></Box
+  >
 </Layout>
