--- a/src/ThemeIcon.astro
+++ b/src/ThemeIcon.astro
@@ -43,6 +43,9 @@
 </style>
 
 <script is:inline>
+  const LIGHT = 'light'
+  const DARK = 'dark'
+
   document.addEventListener('astro:page-load', () => {
     const theme = (() => {
       if (
@@ -52,40 +55,31 @@
         return localStorage.getItem('theme')
       }
       if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        return 'dark'
+        return DARK
       }
-      return 'light'
+      return LIGHT
     })()
 
-    if (theme === 'light') {
-      document.documentElement.classList.remove('dark')
+    if (theme === LIGHT) {
+      document.documentElement.classList.remove(DARK)
     } else {
-      document.documentElement.classList.add('dark')
+      document.documentElement.classList.add(DARK)
     }
 
     window.localStorage.setItem('theme', theme)
 
     const btnSunMoo = document.getElementById('themeToggle')
 
-    // const handleToggleClick = () => {
-    //   const element = document.documentElement;
-    //   element.classList.toggle("dark");
-
-    //   const isDark = element.classList.contains("dark");
-    //   localStorage.setItem("theme", isDark ? "dark" : "light");
-    // };
-
     btnSunMoo.addEventListener('click', (e) => {
-      alert('click')
       const element = document.documentElement
-      // // element.classList.toggle('dark')
+      // // element.classList.toggle(DARK)
 
-      // const isDark = element.classList.contains('dark')
-      const isDark = element.getAttribute('color-theme')
+      // const isDark = element.classList.contains(DARK)
+      const isDark = element.getAttribute('data-theme')
 
-      element.setAttribute('color-theme', isDark ? 'light' : 'dark')
+      element.setAttribute('data-theme', isDark ? LIGHT : DARK)
 
-      localStorage.setItem('theme', isDark ? 'light' : 'dark')
+      localStorage.setItem('theme', isDark ? LIGHT : DARK)
 
       // e.target.setAttribute('data-state', isDark ? 'moon' : 'sun')
     })
