--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,14 @@
 ---
+import { Box, Cluster } from '@cc/index'
+type Props = {
+  invertMe: boolean
+}
 const today = new Date()
-import { Box, Center, Stack, Cluster } from '@cc/index'
+
+const { invertMe }: Props = Astro.props
 ---
 
-<footer class="box invert">
+<footer class:list={['box', { invert: invertMe }]}>
   <Cluster justify="space-between">
     <Box
       ><h6>
@@ -62,26 +67,26 @@ import { Box, Center, Stack, Cluster } from '@cc/index'
       </button>
     </Box>
   </Cluster>
+
+  <style>
+    p {
+      font-size: calc(var(--s0) / var(--ratio));
+    }
+
+    .icon {
+      width: 0.75em;
+      width: 1cap;
+      height: 0.75em;
+      height: 1cap;
+    }
+
+    .with-icon {
+      display: inline-flex;
+      align-items: baseline;
+    }
+
+    .with-icon .icon {
+      margin-inline-end: 3rem;
+    }
+  </style>
 </footer>
-
-<style>
-  p {
-    font-size: calc(var(--s0) / var(--ratio));
-  }
-
-  .icon {
-    width: 0.75em;
-    width: 1cap;
-    height: 0.75em;
-    height: 1cap;
-  }
-
-  .with-icon {
-    display: inline-flex;
-    align-items: baseline;
-  }
-
-  .with-icon .icon {
-    margin-inline-end: 3rem;
-  }
-</style>
