--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,20 +1,20 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content'
+import { getCollection } from 'astro:content'
 import BlogPost from '@layouts/BlogPost.astro'
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog')
-  return posts.map((post) => ({
-    params: { slug: post.slug },
-    props: post,
+  const objs = posts.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
   }))
+  return objs
 }
-type Props = CollectionEntry<'blog'>
 
-const post = Astro.props
-const { Content } = await post.render()
+const { entry } = Astro.props
+const { Content } = await entry.render()
 ---
 
-<BlogPost {...post.data}>
+<BlogPost {...entry}>
   <Content />
 </BlogPost>
