--- a/src/customComponents/Frame/index.astro
+++ b/src/customComponents/Frame/index.astro
@@ -1,6 +1,40 @@
 ---
 import './Frame.css'
 
+// Define each ratio as its own type
+// type Ratio16_9 = '16:9';
+// type Ratio4_3 = '4:3';
+// type Ratio1_1 = '1:1';
+// type Ratio3_4 = '3:4';
+// type Ratio9_16 = '9:16';
+// type Ratio3_2 = '3:2';
+// type Ratio2_3 = '2:3';
+// type Ratio1_2 = '1:2';
+// type Ratio2_1 = '2:1';
+// type Ratio1_3 = '1:3';
+// type Ratio3_1 = '3:1';
+// type Ratio1_4 = '1:4';
+// type Ratio4_1 = '4:1';
+
+// // Define the Props type using the ratio types
+// type Props = {
+//   ratio:
+//     | Ratio16_9
+//     | Ratio4_3
+//     | Ratio1_1
+//     | Ratio3_4
+//     | Ratio9_16
+//     | Ratio3_2
+//     | Ratio2_3
+//     | Ratio1_2
+//     | Ratio2_1
+//     | Ratio1_3
+//     | Ratio3_1
+//     | Ratio1_4
+//     | Ratio4_1;
+//   children: unknown;
+// };
+
 type Props = {
   ratio:
     | '16:9'
