--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Stack, Center, Imposter } from '@cc/index.ts'
+import { Box, Stack, Center } from '@cc/index.ts'
 
 import CloseBtn from './CloseBtn.astro'
 import ConfetiBtn from './ConfettiButton.astro'
