--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,7 +2,7 @@
 // import type { CollectionEntry } from 'astro:content'
 // import { getEntry } from 'astro:content'
 import { Box, Center } from '@cc/index.ts'
-
+import { Image } from 'astro:assets'
 import type { BlogSchemaType } from '../schemas'
 import FormattedDate from '@components/FormattedDate.astro'
 // import Author from '@components/Author.astro'
@@ -20,24 +20,23 @@ const { title, description, pubDate, cover } = data
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
   <Center>
     <div class="stack">
-      <Box> <h2>{description}</h2></Box>
+      <Image
+        src={cover.url}
+        width="1200"
+        sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px`}
+        height="300"
+        alt={cover.alt}
+      />
+      <Box invert> <p>{description}</p></Box>
       <!-- {author && <Author {...author} />} -->
-      <Box>
-        <div class="hero-image box">
-          <img width={1020} height={510} src={cover.url} alt={cover.url} />
-        </div>
-        <div class="prose box">
-          <div class="box">
-            <div class="date box">
-              <FormattedDate date={pubDate} />
-            </div>
-            <div class="box"><h3>{title}</h3></div>
-            <hr />
-          </div>
 
-          <slot />
-        </div>
-      </Box>
+      <div class="date box">
+        <FormattedDate date={pubDate} />
+      </div>
+      <div class="box"><h3>{title}</h3></div>
+      <hr />
+
+      <slot />
     </div>
   </Center>
 </Layout>
