--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@layouts/SimpleLayout.astro'
-import { Box, Stack, Center } from '@cc/index.ts'
+import Layout from '@layouts/SimpleLayout.astro';
+import { Box, Stack, Center } from '@cc/index.ts';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
@@ -31,9 +31,3 @@ import { Box, Stack, Center } from '@cc/index.ts'
     </Stack>
   </Center>
 </Layout>
-
-<style>
-  article :global(h1) {
-    color: blue;
-  }
-</style>
