--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -1,16 +1,16 @@
 ---
-import { Box, Cluster } from '@cc/index'
+import { Box, Cluster } from '@cc/index';
 
 function generateRandomString() {
-  const length = 8
+  const length = 8;
   // Math.floor(Math.random() * 13) + 3 // Generate a random length between 3 and 15
-  let result = ''
+  let result = '';
   const characters =
-    'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'
+    'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
   for (let i = 0; i < length; i++) {
-    result += characters.charAt(Math.floor(Math.random() * characters.length))
+    result += characters.charAt(Math.floor(Math.random() * characters.length));
   }
-  return result
+  return result;
 }
 ---
 
@@ -28,14 +28,3 @@ function generateRandomString() {
     <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
   </Cluster>
 </Box>
-
-<style>
-  .wrapper {
-    display: block;
-    border: 1px solid black;
-  }
-
-  a {
-    border: 1px solid black;
-  }
-</style>
