--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '@layouts/SimpleLayout.astro'
-import { Imposter, Cluster } from '@cc/index.ts'
+import Layout from '@layouts/SimpleLayout.astro';
+import { Imposter, Cluster } from '@cc/index.ts';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
@@ -13,13 +13,3 @@ import { Imposter, Cluster } from '@cc/index.ts'
     </Cluster>
   </Imposter>
 </Layout>
-
-<style>
-  .fill {
-    background-color: aqua;
-    height: 100%;
-    width: 100%;
-  }
-  .h4 {
-  }
-</style>
