--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,20 +1,20 @@
 ---
 // import type { CollectionEntry } from 'astro:content'
 // import { getEntry } from 'astro:content'
-import { Box, Center } from '@cc/index.ts';
-import { Image } from 'astro:assets';
-import type { BlogSchemaType } from '../schemas';
-import FormattedDate from '@components/FormattedDate.astro';
+import { Box, Center } from '@cc/index.ts'
+import { Image } from 'astro:assets'
+import type { BlogSchemaType } from '../schemas'
+import FormattedDate from '@components/FormattedDate.astro'
 // import Author from '@components/Author.astro'
-import Layout from '@layouts/SimpleLayout.astro';
+import Layout from '@layouts/LayoutWcover.astro'
 
 type Props = {
-  data: BlogSchemaType;
-};
+  data: BlogSchemaType
+}
 
-const { data } = Astro.props;
+const { data } = Astro.props
 
-const { title, description, pubDate, cover } = data;
+const { title, description, pubDate, cover } = data
 ---
 
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
