--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/SimpleLayout.astro'
+import Layout from '@layouts/LayoutWcover.astro'
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
