--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets'
 
 // import DummCards from '@components/DummyCards.astro'
 
-import Layout from '@layouts/SimpleLayout.astro'
+import Layout from '@layouts/LayoutWcover.astro'
 
 const W = 100
 const H = 50
