--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/SimpleLayout.astro'
+import Layout from '@layouts/LayoutWcover.astro'
 import { Box, Switcher } from '@cc/index.ts'
 ---
 
