--- a/src/layouts/LayoutWcover.astro
+++ b/src/layouts/LayoutWcover.astro
@@ -1,5 +1,5 @@
 ---
-import GlobalStyle from '@styles/GlobalStyles.astro'
+import GlobalStyle from '@styles/GlobalStyles.css'
 
 import { ViewTransitions } from 'astro:transitions'
 import BaseHead from '@components/BaseHead.astro'
