--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
-import { Box, Cluster } from '@cc/index';
+import { Box, Cluster } from '@cc/index'
 type Props = {
-  invertMe: boolean;
-};
-const today = new Date();
+  invertMe: boolean
+}
+const today = new Date()
 
-const { invertMe }: Props = Astro.props;
+const { invertMe }: Props = Astro.props
 ---
 
 <footer class:list={['box', { invert: invertMe }]}>
