--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,11 +21,11 @@ const { title, description, pubDate, cover } = data
   <Center>
     <div class="stack">
       <Image
-        src={cover.url}
+        src={cover.src}
         width="1200"
         sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px`}
         height="300"
-        alt={cover.alt}
+        alt={cover.description}
       />
       <Box invert> <p>{description}</p></Box>
       <!-- {author && <Author {...author} />} -->
