--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -11,7 +11,9 @@ import ConfetiBtn from './ConfettiButton.astro'
       <div class="pushRight"><ConfetiBtn /></div>
       <div class="pushRight"><CloseBtn /></div>
       <h4>Dialouge Box</h4>
-      <div class="center" style="{{max-inline-size: 50ch;}}">
+      <div
+       
+      >
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum
         dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet
         consectetur adipisicing elit.
@@ -25,12 +27,3 @@ import ConfetiBtn from './ConfettiButton.astro'
   </Center>
 </Box>
 
-<style>
-  /* .center {
-        max-inline-size: 50ch;
-    } */
-
-  .pushRight {
-    align-self: flex-end;
-  }
-</style>
