--- a/src/customComponents/Box/Box.css
+++ b/src/customComponents/Box/Box.css
@@ -3,6 +3,6 @@ box-l {
   padding: var(--s1);
   border-width: var(--border-thin);
   /* ↓ For high contrast mode */
-  outline: var(--border-thin) solid transparent;
-  outline-offset: calc(var(--border-thin) * -1);
+  outline: 0.125rem solid transparent;
+  outline-offset: -0.125rem;
 }
