--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/LayoutWcover.astro'
-import { Box, Switcher } from '@cc/index.ts'
+import { Box, Switcher } from '@cc/index'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
@@ -15,9 +15,9 @@ import { Box, Switcher } from '@cc/index.ts'
 
       <Box borderWidth="0">
         <Switcher>
-          <div class="box filled"></div>
-          <div class="box filled"></div>
-          <div class="box filled"></div>
+          <Box borderWidth="1px">x</Box>
+          <Box borderWidth="1px">x</Box>
+          <Box borderWidth="1px">x</Box>
         </Switcher>
       </Box>
     </Box>
