--- a/src/customComponents/Container/index.astro
+++ b/src/customComponents/Container/index.astro
@@ -1,6 +1,4 @@
 ---
-import './Container.css'
-
 // const LIST = 'list'
 
 type Props = {
@@ -16,6 +14,15 @@ const { name } = Astro.props
 </container-l>
 
 <script src="./Container.ts"></script>
+
+<style is:global>
+  center-l {
+    display: block;
+    box-sizing: content-box;
+    margin-inline: auto;
+    max-inline-size: var(--measure);
+  }
+</style>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
