--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,14 +14,14 @@ const posts = (await getCollection('blog')).sort(
     <Switcher>
       {
         posts.map((post) => (
-          <div class="box">
+          <Box>
             <a href={`/blog/${post.slug}/`}>
               <h4 class="title">{post.data.title}</h4>
               <p class="date">
                 <FormattedDate date={post.data.pubDate} />
               </p>
             </a>
-          </div>
+          </Box>
         ))
       }
     </Switcher>
