--- a/src/styles/modular-scale.css
+++ b/src/styles/modular-scale.css
@@ -1,13 +1,35 @@
 :root {
-  --measure: 60ch;
+ --measure: 60ch;
   --ratio: 1.61803398875;
   --font-size-base: 1rem;
+
   --s0: var(--font-size-base);
+  --s00: calc(var(--s0) * pow(var(--ratio), -3));
+  --s00: calc(var(--s0) * pow(var(--ratio), -2));
   --s1: calc(var(--s0) * pow(var(--ratio), 1));
   --s2: calc(var(--s0) * pow(var(--ratio), 2));
+
   --s3: calc(var(--s0) * pow(var(--ratio), 3));
   --s4: calc(var(--s0) * pow(var(--ratio), 4));
   --s5: calc(var(--s0) * pow(var(--ratio), 5));
+  --s6: calc(var(--s0) * pow(var(--ratio), 6));
+  --s7: calc(var(--s0) * pow(var(--ratio), 7));
+  --s8: calc(var(--s0) * pow(var(--ratio), 8));
+
+   --h0: 10;
+  --h1: calc(80vh / var(--h0) * pow(var(--ratio), 1));
+  --h2: calc(80vh / var(--h0) * pow(var(--ratio), 2));
+  --h3: calc(80vh / var(--h0) * pow(var(--ratio), 3));
+  --h4: calc(80vh / var(--h0) * pow(var(--ratio), 4));
+  --h5: calc(80vh / var(--h0) * pow(var(--ratio), 5));
+
+
+  
 
   --line-height: var(--ratio);
+  --border-thin: var(--border-size-1);
+
+  
+  --font-size-biggish: var(--s1);
+  --font-size-big: var(--s2);
 }
