--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -9,53 +9,49 @@
 ---
 
 <style is:global>
-  @layer base, utils, vars, vendors, themes;
+  @layer base, utils, vars;
+  @import url('open-props/postcss/style') layer(base);
+  @import url('open-props/postcss/buttons') layer(base);
+  @import url('open-props/postcss/normalize') layer(base);
+  @import url('./modular-scale.css') layer(base);
+  @import url('./utilities.css') layer(utils);
+  @import url('./variables.css') layer(vars);
+  /* @import url('./light.css') layer(light);
+  @import url('./dark.css') layer(dark);
 
-/* Import a .css file and assign it to a layer */
+  @layer themes {
+    @layer light;
+  } */
 
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --text-1: var(--text-1-dark);
+      --text-2: var(--text-2-dark);
+      --surface-1: var(--surface-1-dark);
+      --surface-2: var(--surface-2-dark);
+      --surface-3: var(--surface-3-dark);
+      --surface-4: var(--surface-4-dark);
+      --surface-shadow: var(--surface-shadow-dark);
+      --shadow-strength: var(--shadow-strength-dark);
 
-@import url('open-props/postcss/style') layer(base);
-@import url('open-props/postcss/buttons') layer(base);
-@import url('open-props/postcss/normalize') layer(base);
-@import url('./modular-scale.css') layer(base);
-@import url('./utilities.css') layer(utils);
-@import url('./variables.css') layer(vars);
-
-@layer themes {
-   
-    @layer light, dark;
-
-    @layer dark {
-        
-            --text-1: var(--text-1-light);
-            --text-2: var(--text-2-light);
-            --surface-1: var(--surface-1-light);
-            --surface-2: var(--surface-2-light);
-            --surface-3: var(--surface-3-light);
-            --surface-4: var(--surface-4-light);
-            --surface-shadow: var(--surface-shadow-light);
-            --shadow-strength: var(--shadow-strength-light);
-
-            --brand: var(--brand-light);
-            --border-color: var(--brand-light);
-        
+      --brand: var(--brand-dark);
+      --border-color: var(--brand-dark);
     }
+  }
 
-    @layer light {
-    
-            --text-1: var(--text-1-dark);
-            --text-2: var(--text-2-dark);
-            --surface-1: var(--surface-1-dark);
-            --surface-2: var(--surface-2-dark);
-            --surface-3: var(--surface-3-dark);
-            --surface-4: var(--surface-4-dark);
-            --surface-shadow: var(--surface-shadow-dark);
-            --shadow-strength: var(--shadow-strength-dark);
+  @media (prefers-color-scheme: light) {
+    :root {
+      --text-1: var(--text-1-light);
+      --text-2: var(--text-2-light);
+      --surface-1: var(--surface-1-light);
+      --surface-2: var(--surface-2-light);
+      --surface-3: var(--surface-3-light);
+      --surface-4: var(--surface-4-light);
+      --surface-shadow: var(--surface-shadow-light);
+      --shadow-strength: var(--shadow-strength-light);
 
-            --brand: var(--brand-dark);
-            --border-color: var(--brand-dark);
-        
+      --brand: var(--brand-light);
+      --border-color: var(--brand-light);
     }
-}
-  
+  }
 </style>
