--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -11,9 +11,7 @@ import ConfetiBtn from './ConfettiButton.astro'
       <div class="pushRight"><ConfetiBtn /></div>
       <div class="pushRight"><CloseBtn /></div>
       <h4>Dialouge Box</h4>
-      <div
-       
-      >
+      <div>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum
         dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet
         consectetur adipisicing elit.
@@ -26,4 +24,3 @@ import ConfetiBtn from './ConfettiButton.astro'
     </Stack>
   </Center>
 </Box>
-
