--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,13 +1,13 @@
 ---
 // import type { CollectionEntry } from 'astro:content'
 // import { getEntry } from 'astro:content'
-import { Box, Stack, Center } from '@cc/index.ts';
-import { Image } from 'astro:assets';
+import { Box, Stack, Center } from '@cc/index.ts'
+import { Image } from 'astro:assets'
 
-import FormattedDate from '@components/FormattedDate.astro';
+import FormattedDate from '@components/FormattedDate.astro'
 // import Author from '@components/Author.astro'
 import Layout from '@layouts/LayoutWcover.astro'
-import type { BlogSchemaType } from '../schemas';
+import type { BlogSchemaType } from '../schemas'
 
 type Props = {
   data: BlogSchemaType
