--- a/src/layouts/LayoutWcover.astro
+++ b/src/layouts/LayoutWcover.astro
@@ -10,14 +10,10 @@ import { Cover, Center } from '@cc/index'
 type Props = {
   title?: string
   description?: string
-  dark?: boolean
 }
 
-const {
-  title = 'I NEED A TITLE',
-  description = 'no description provided',
-  dark = false,
-} = Astro.props
+const { title = 'I NEED A TITLE', description = 'no description provided' } =
+  Astro.props
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 ---
@@ -30,7 +26,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site)
     <GlobalStyle />
   </head>
 
-  <body id="the-body" color->
+  <body id="the-body">
     <Cover centeredElement="center-l" noPad={true} space="0">
       <Header />
 
